@@ -3,24 +3,32 @@ package com.taotao.cloud.workflow.biz.engine.util;
 import cn.hutool.core.util.ObjectUtil;
 import cn.hutool.core.util.StrUtil;
 import com.taotao.cloud.common.utils.common.JsonUtils;
-import com.taotao.cloud.workflow.api.database.model.dto.PreparedStatementDTO;
-import com.taotao.cloud.workflow.api.database.model.entity.DbLinkEntity;
-import com.taotao.cloud.workflow.api.model.FormAllModel;
-import com.taotao.cloud.workflow.api.model.FormColumnModel;
-import com.taotao.cloud.workflow.api.model.FormColumnTableModel;
-import com.taotao.cloud.workflow.api.model.FormEnum;
-import com.taotao.cloud.workflow.api.model.FormMastTableModel;
-import com.taotao.cloud.workflow.api.model.visiual.FlowKeyConsts;
-import com.taotao.cloud.workflow.api.model.visiual.FormCloumnUtil;
-import com.taotao.cloud.workflow.api.model.visiual.RecursionForm;
-import com.taotao.cloud.workflow.api.model.visiual.TableModel;
-import com.taotao.cloud.workflow.api.model.visiual.fields.FieLdsModel;
-import com.taotao.cloud.workflow.api.model.visiual.fields.props.PropsBeanModel;
+import com.taotao.cloud.workflow.biz.common.base.UserInfo;
+import com.taotao.cloud.workflow.biz.common.config.ConfigValueUtil;
+import com.taotao.cloud.workflow.biz.common.constant.MsgCode;
+import com.taotao.cloud.workflow.biz.common.database.model.dto.PreparedStatementDTO;
+import com.taotao.cloud.workflow.biz.common.database.util.ConnUtil;
+import com.taotao.cloud.workflow.biz.common.database.util.DataSourceUtil;
+import com.taotao.cloud.workflow.biz.common.database.util.DbTypeUtil;
+import com.taotao.cloud.workflow.biz.common.database.util.JdbcUtil;
+import com.taotao.cloud.workflow.biz.common.model.FormAllModel;
+import com.taotao.cloud.workflow.biz.common.model.FormColumnModel;
+import com.taotao.cloud.workflow.biz.common.model.FormColumnTableModel;
+import com.taotao.cloud.workflow.biz.common.model.FormEnum;
+import com.taotao.cloud.workflow.biz.common.model.FormMastTableModel;
+import com.taotao.cloud.workflow.biz.common.model.visiual.RecursionForm;
+import com.taotao.cloud.workflow.biz.common.model.visiual.TableModel;
+import com.taotao.cloud.workflow.biz.common.model.visiual.WorkflowKeyConsts;
+import com.taotao.cloud.workflow.biz.common.model.visiual.fields.FieLdsModel;
+import com.taotao.cloud.workflow.biz.common.model.visiual.fields.props.PropsBeanModel;
+import com.taotao.cloud.workflow.biz.common.util.DateUtil;
+import com.taotao.cloud.workflow.biz.common.util.RandomUtil;
+import com.taotao.cloud.workflow.biz.common.util.UserProvider;
 import com.taotao.cloud.workflow.api.vo.OrganizeEntity;
 import com.taotao.cloud.workflow.api.vo.PositionEntity;
 import com.taotao.cloud.workflow.api.vo.UserEntity;
 import com.taotao.cloud.workflow.biz.engine.entity.FlowTaskEntity;
-import com.taotao.cloud.workflow.api.common.model.engine.DataModel;
+import com.taotao.cloud.workflow.biz.common.model.engine.DataModel;
 import com.taotao.cloud.workflow.biz.exception.WorkFlowException;
 import java.math.BigDecimal;
 import java.sql.Connection;
@@ -42,7 +50,7 @@ import lombok.extern.slf4j.Slf4j;
 import org.hibernate.exception.DataException;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
-
+import com.taotao.cloud.workflow.biz.common.database.model.entity.DbLinkEntity;
 @Component
 @Slf4j
 public class FlowDataUtil {
@@ -99,9 +107,8 @@ public class FlowDataUtil {
 	private List<Map<String, Object>> getTableList(Connection conn, String sql)
 		throws WorkFlowException {
 		try {
-			List<Map<String, Object>> list = JdbcUtil.queryListLowercase(
+			return JdbcUtil.queryListLowercase(
 				new PreparedStatementDTO(conn, sql));
-			return list;
 		} catch (DataException e) {
 			throw new WorkFlowException(e.getMessage());
 		}
@@ -219,13 +226,13 @@ public class FlowDataUtil {
 			List<TableModel> tableList = dataModel.getTableModelList();
 			Optional<TableModel> first = tableList.stream().filter(t -> "1".equals(t.getTypeId()))
 				.findFirst();
-			if (!first.isPresent()) {
+			if (first.isEmpty()) {
 				throw new WorkFlowException(MsgCode.COD001.get());
 			}
 			String mastTableName = first.get().getTable();
 			List<FormAllModel> mastForm = formAllModel.stream()
-				.filter(t -> FormEnum.mast.getMessage().equals(t.getFlowKey()))
-				.collect(Collectors.toList());
+				.filter(t -> FormEnum.mast.getMessage().equals(t.getWorkflowKey()))
+				.toList();
 			List<String> mastFile = mastForm.stream().filter(
 					t -> StrUtil.isNotEmpty(t.getFormColumnModel().getFieLdsModel().getVModel()))
 				.map(t -> t.getFormColumnModel().getFieLdsModel().getVModel())
@@ -252,8 +259,8 @@ public class FlowDataUtil {
 			data.putAll(mastDataAll);
 			//子表数据
 			List<FormAllModel> tableForm = formAllModel.stream()
-				.filter(t -> FormEnum.table.getMessage().equals(t.getFlowKey()))
-				.collect(Collectors.toList());
+				.filter(t -> FormEnum.table.getMessage().equals(t.getWorkflowKey()))
+				.toList();
 			Map<String, Object> childData = new HashMap<>();
 			for (FormAllModel model : tableForm) {
 				FormColumnTableModel childList = model.getChildList();
@@ -265,7 +272,7 @@ public class FlowDataUtil {
 					.map(t -> t.getFieLdsModel().getVModel()).collect(Collectors.toList());
 				Optional<TableModel> first1 = tableList.stream()
 					.filter(t -> t.getTable().equals(tableName)).findFirst();
-				if (!first1.isPresent()) {
+				if (first1.isEmpty()) {
 					throw new WorkFlowException(MsgCode.COD001.get());
 				}
 				TableModel table = first1.get();
@@ -280,8 +287,9 @@ public class FlowDataUtil {
 					for (String key : tableData.keySet()) {
 						Object value = tableData.get(key);
 						FieLdsModel fieLdsModel = childList.getChildList().stream()
-							.filter(t -> key.equals(t.getFieLdsModel().getVModel().toLowerCase()))
-							.map(FormColumnModel::getFieLdsModel).findFirst().orElse(null);
+							.map(FormColumnModel::getFieLdsModel)
+							.filter(ldsModel -> key.equals(ldsModel.getVModel().toLowerCase())).findFirst().orElse(null);
+						assert fieLdsModel != null;
 						value = this.info(fieLdsModel, value, true);
 						String dataKey = fieLdsModel.getVModel();
 						childDataOne.put(dataKey, value);
@@ -293,12 +301,12 @@ public class FlowDataUtil {
 			data.putAll(childData);
 			//副表
 			Map<String, List<FormAllModel>> mastTableAll = formAllModel.stream()
-				.filter(t -> FormEnum.mastTable.getMessage().equals(t.getFlowKey()))
+				.filter(t -> FormEnum.mastTable.getMessage().equals(t.getWorkflowKey()))
 				.collect(Collectors.groupingBy(e -> e.getFormMastTableModel().getTable()));
 			for (String key : mastTableAll.keySet()) {
 				Optional<TableModel> first1 = tableList.stream()
 					.filter(t -> t.getTable().equals(key)).findFirst();
-				if (!first1.isPresent()) {
+				if (first1.isEmpty()) {
 					throw new WorkFlowException(MsgCode.COD001.get());
 				}
 				TableModel tableModel = first1.get();
@@ -318,6 +326,7 @@ public class FlowDataUtil {
 							t -> mastKey.equals(t.getFormMastTableModel().getField().toLowerCase()))
 						.map(t -> t.getFormMastTableModel().getMastTable().getFieLdsModel())
 						.findFirst().orElse(null);
+					assert fieLdsModel != null;
 					value = this.info(fieLdsModel, value, true);
 					String dataKey = fieLdsModel.getVModel();
 					mastTable.put(dataKey, value);
@@ -340,10 +349,10 @@ public class FlowDataUtil {
 		Map<String, Object> dataMap = dataModel.getDataNewMap();
 		Map<String, Object> result = new HashMap<>();
 		List<FormAllModel> mastForm = formAllModel.stream()
-			.filter(t -> FormEnum.mast.getMessage().equals(t.getFlowKey()))
+			.filter(t -> FormEnum.mast.getMessage().equals(t.getWorkflowKey()))
 			.toList();
 		List<FormAllModel> tableForm = formAllModel.stream()
-			.filter(t -> FormEnum.table.getMessage().equals(t.getFlowKey()))
+			.filter(t -> FormEnum.table.getMessage().equals(t.getWorkflowKey()))
 			.toList();
 		for (String key : dataMap.keySet()) {
 			FormAllModel model = mastForm.stream()
@@ -391,13 +400,13 @@ public class FlowDataUtil {
 	 **/
 	private Object info(FieLdsModel fieLdsModel, Object dataValue, boolean isTable) {
 		Object value = dataValue;
-		String flowKey = fieLdsModel.getConfig().getFlowKey();
+		String flowKey = fieLdsModel.getConfig().getWorkflowKey();
 		String format = fieLdsModel.getFormat();
 		boolean multiple = fieLdsModel.getMultiple();
 		String showLevel = fieLdsModel.getShowLevel();
 		switch (flowKey) {
-			case FlowKeyConsts.CURRORGANIZE:
-			case FlowKeyConsts.CURRDEPT:
+			case WorkflowKeyConsts.CURRORGANIZE:
+			case WorkflowKeyConsts.CURRDEPT:
 				if (ObjectUtil.isNotEmpty(value)) {
 					OrganizeEntity organizeEntity = serviceUtil.getOrganizeInfo(
 						String.valueOf(value));
@@ -415,16 +424,16 @@ public class FlowDataUtil {
 					}
 				}
 				break;
-			case FlowKeyConsts.CREATEUSER:
-			case FlowKeyConsts.MODIFYUSER:
+			case WorkflowKeyConsts.CREATEUSER:
+			case WorkflowKeyConsts.MODIFYUSER:
 				if (ObjectUtil.isNotEmpty(value)) {
-					UserEntity userEntity = serviceUtil.getUserInfo(String.valueOf(value));
+					UserEntity userEntity = serviceUtil.getUserInfo(Long.valueOf((String) value));
 					if (userEntity != null) {
 						value = userEntity.getRealName();
 					}
 				}
 				break;
-			case FlowKeyConsts.CURRPOSITION:
+			case WorkflowKeyConsts.CURRPOSITION:
 				if (ObjectUtil.isNotEmpty(value)) {
 					PositionEntity positionEntity = serviceUtil.getPositionInfo(
 						String.valueOf(value));
@@ -433,8 +442,8 @@ public class FlowDataUtil {
 					}
 				}
 				break;
-			case FlowKeyConsts.UPLOADFZ:
-			case FlowKeyConsts.UPLOADIMG:
+			case WorkflowKeyConsts.UPLOADFZ:
+			case WorkflowKeyConsts.UPLOADIMG:
 				if (value == null) {
 					value = new ArrayList<>();
 				} else {
@@ -443,9 +452,9 @@ public class FlowDataUtil {
 					}
 				}
 				break;
-			case FlowKeyConsts.CHECKBOX:
-			case FlowKeyConsts.DATERANGE:
-			case FlowKeyConsts.TIMERANGE:
+			case WorkflowKeyConsts.CHECKBOX:
+			case WorkflowKeyConsts.DATERANGE:
+			case WorkflowKeyConsts.TIMERANGE:
 				if (value == null) {
 					value = new ArrayList<>();
 				} else {
@@ -454,8 +463,8 @@ public class FlowDataUtil {
 					}
 				}
 				break;
-			case FlowKeyConsts.COMSELECT:
-			case FlowKeyConsts.ADDRESS:
+			case WorkflowKeyConsts.COMSELECT:
+			case WorkflowKeyConsts.ADDRESS:
 				if (isTable) {
 					if (multiple) {
 						value = JsonUtils.toObject(String.valueOf(value), String[][].class);
@@ -464,17 +473,17 @@ public class FlowDataUtil {
 					}
 				}
 				break;
-			case FlowKeyConsts.SELECT:
-			case FlowKeyConsts.USERSELECT:
-			case FlowKeyConsts.DEPSELECT:
-			case FlowKeyConsts.POSSELECT:
+			case WorkflowKeyConsts.SELECT:
+			case WorkflowKeyConsts.USERSELECT:
+			case WorkflowKeyConsts.DEPSELECT:
+			case WorkflowKeyConsts.POSSELECT:
 				if (isTable) {
 					if (multiple) {
 						value = JsonUtils.toList(String.valueOf(value), String.class);
 					}
 				}
 				break;
-			case FlowKeyConsts.DATE:
+			case WorkflowKeyConsts.DATE:
 				if (isTable) {
 					try {
 						SimpleDateFormat sdf = new SimpleDateFormat(format);
@@ -484,8 +493,8 @@ public class FlowDataUtil {
 					}
 				}
 				break;
-			case FlowKeyConsts.SLIDER:
-			case FlowKeyConsts.SWITCH:
+			case WorkflowKeyConsts.SLIDER:
+			case WorkflowKeyConsts.SWITCH:
 				if (isTable) {
 					try {
 						value = Integer.valueOf(String.valueOf(value));
@@ -494,7 +503,7 @@ public class FlowDataUtil {
 					}
 				}
 				break;
-			case FlowKeyConsts.CASCADER:
+			case WorkflowKeyConsts.CASCADER:
 				if (value == null) {
 					value = new ArrayList<>();
 				} else {
@@ -590,7 +599,7 @@ public class FlowDataUtil {
 		Map<String, Object> result) throws SQLException {
 		//子表
 		List<FormAllModel> tableForm = formAllModel.stream()
-			.filter(t -> FormEnum.table.getMessage().equals(t.getFlowKey()))
+			.filter(t -> FormEnum.table.getMessage().equals(t.getWorkflowKey()))
 			.toList();
 		Map<String, List<FormColumnModel>> childMap = new HashMap<>();
 		Map<String, TableModel> chidTable = new HashMap<>();
@@ -645,13 +654,13 @@ public class FlowDataUtil {
 				Map<String, Object> childOneResult = new HashMap<>(16);
 				for (String childKey : columMap.keySet()) {
 					FieLdsModel fieLdsModel = columMap.get(childKey);
-					String flowKey = fieLdsModel.getConfig().getFlowKey();
+					String flowKey = fieLdsModel.getConfig().getWorkflowKey();
 					Object data = objectMap.get(childKey);
 					//处理系统自动生成
 					data = this.create(fieLdsModel, data, true);
-					String value = (isOracle && (FlowKeyConsts.DATE.equals(flowKey)
-						|| FlowKeyConsts.MODIFYTIME.equals(flowKey)
-						|| FlowKeyConsts.CREATETIME.equals(flowKey)))
+					String value = (isOracle && (WorkflowKeyConsts.DATE.equals(flowKey)
+						|| WorkflowKeyConsts.MODIFYTIME.equals(flowKey)
+						|| WorkflowKeyConsts.CREATETIME.equals(flowKey)))
 						? "to_date(?,'yyyy-mm-dd HH24:mi:ss')" : "?";
 					//添加数据
 					childData.add(data);
@@ -696,12 +705,12 @@ public class FlowDataUtil {
 		Map<String, Object> result) throws SQLException {
 		//副表
 		Map<String, List<FormAllModel>> mastTableAll = formAllModel.stream()
-			.filter(t -> FormEnum.mastTable.getMessage().equals(t.getFlowKey()))
+			.filter(t -> FormEnum.mastTable.getMessage().equals(t.getWorkflowKey()))
 			.collect(Collectors.groupingBy(e -> e.getFormMastTableModel().getTable()));
 		for (String key : mastTableAll.keySet()) {
 			Optional<TableModel> first = tableModelList.stream()
 				.filter(t -> t.getTable().equals(key)).findFirst();
-			if (!first.isPresent()) {
+			if (first.isEmpty()) {
 				throw new SQLException(MsgCode.COD001.get());
 			}
 			TableModel tableModel = first.get();
@@ -722,7 +731,7 @@ public class FlowDataUtil {
 				if (StrUtil.isEmpty(mostTableKey)) {
 					continue;
 				}
-				String flowKey = fieLdsModel.getConfig().getFlowKey();
+				String flowKey = fieLdsModel.getConfig().getWorkflowKey();
 				Object data = allDataMap.get(mostTableKey);
 				//处理系统自动生成
 				data = this.create(fieLdsModel, data, true);
@@ -731,8 +740,8 @@ public class FlowDataUtil {
 				//添加字段
 				mastData.add(data);
 				String field = formMastTableModel.getField();
-				String value = (isOracle && (FlowKeyConsts.DATE.equals(flowKey)
-					|| FlowKeyConsts.MODIFYTIME.equals(flowKey) || FlowKeyConsts.CREATETIME.equals(
+				String value = (isOracle && (WorkflowKeyConsts.DATE.equals(flowKey)
+					|| WorkflowKeyConsts.MODIFYTIME.equals(flowKey) || WorkflowKeyConsts.CREATETIME.equals(
 					flowKey))) ? "to_date(?,'yyyy-mm-dd HH24:mi:ss')" : "?";
 				filedModel.add(field);
 				filedValue.add(value);
@@ -763,13 +772,13 @@ public class FlowDataUtil {
 		Map<String, Object> result) throws SQLException {
 		Optional<TableModel> first = tableModelList.stream().filter(t -> "1".equals(t.getTypeId()))
 			.findFirst();
-		if (!first.isPresent()) {
+		if (first.isEmpty()) {
 			throw new SQLException(MsgCode.COD001.get());
 		}
 		TableModel tableModel = first.get();
 		String mastTableName = tableModel.getTable();
 		List<FormAllModel> mastForm = formAllModel.stream()
-			.filter(t -> FormEnum.mast.getMessage().equals(t.getFlowKey()))
+			.filter(t -> FormEnum.mast.getMessage().equals(t.getWorkflowKey()))
 			.filter(t -> StrUtil.isNotEmpty(t.getFormColumnModel().getFieLdsModel().getVModel()))
 			.toList();
 		//新增字段
@@ -779,7 +788,7 @@ public class FlowDataUtil {
 		String keyName = this.getKey(conn, mastTableName);
 		for (FormAllModel model : mastForm) {
 			FieLdsModel fieLdsModel = model.getFormColumnModel().getFieLdsModel();
-			String flowKey = fieLdsModel.getConfig().getFlowKey();
+			String flowKey = fieLdsModel.getConfig().getWorkflowKey();
 			String field = fieLdsModel.getVModel();
 			Object data = allDataMap.get(field);
 			//处理系统自动生成
@@ -787,8 +796,8 @@ public class FlowDataUtil {
 			mastData.add(data);
 			//添加字段
 			String value =
-				(isOracle && (FlowKeyConsts.DATE.equals(flowKey) || FlowKeyConsts.MODIFYTIME.equals(
-					flowKey) || FlowKeyConsts.CREATETIME.equals(flowKey)))
+				(isOracle && (WorkflowKeyConsts.DATE.equals(flowKey) || WorkflowKeyConsts.MODIFYTIME.equals(
+					flowKey) || WorkflowKeyConsts.CREATETIME.equals(flowKey)))
 					? "to_date(?,'yyyy-mm-dd HH24:mi:ss')" : "?";
 			filedModel.add(field);
 			filedValue.add(value);
@@ -810,38 +819,38 @@ public class FlowDataUtil {
 	 * 新增系统赋值
 	 **/
 	private Object create(FieLdsModel fieLdsModel, Object dataValue, boolean isTable) {
-		String flowKey = fieLdsModel.getConfig().getFlowKey();
+		String flowKey = fieLdsModel.getConfig().getWorkflowKey();
 		String rule = fieLdsModel.getConfig().getRule();
 		UserEntity userEntity = serviceUtil.getUserInfo(userProvider.get().getUserId());
 		Object value = dataValue;
 		switch (flowKey) {
-			case FlowKeyConsts.CREATEUSER:
+			case WorkflowKeyConsts.CREATEUSER:
 				value = userEntity.getId();
 				break;
-			case FlowKeyConsts.CREATETIME:
+			case WorkflowKeyConsts.CREATETIME:
 				value = DateUtil.getNow("+8");
 				break;
-			case FlowKeyConsts.CURRORGANIZE:
-			case FlowKeyConsts.CURRDEPT:
+			case WorkflowKeyConsts.CURRORGANIZE:
+			case WorkflowKeyConsts.CURRDEPT:
 				value = userEntity.getOrganizeId();
 				break;
-			case FlowKeyConsts.MODIFYTIME:
+			case WorkflowKeyConsts.MODIFYTIME:
 				value = null;
 				break;
-			case FlowKeyConsts.MODIFYUSER:
+			case WorkflowKeyConsts.MODIFYUSER:
 				value = null;
 				break;
-			case FlowKeyConsts.CURRPOSITION:
+			case WorkflowKeyConsts.CURRPOSITION:
 				value = userEntity.getPositionId();
 				break;
-			case FlowKeyConsts.BILLRULE:
+			case WorkflowKeyConsts.BILLRULE:
 				try {
 					value = serviceUtil.getBillNumber(rule);
 				} catch (Exception e) {
 					value = null;
 				}
 				break;
-			case FlowKeyConsts.DATE:
+			case WorkflowKeyConsts.DATE:
 				if (isTable) {
 					try {
 						value = DateUtil.dateToString(
@@ -852,7 +861,7 @@ public class FlowDataUtil {
 					}
 				}
 				break;
-			case FlowKeyConsts.NUM_INPUT:
+			case WorkflowKeyConsts.NUM_INPUT:
 				if (isTable) {
 					try {
 						value = new BigDecimal(String.valueOf(dataValue));
@@ -884,10 +893,10 @@ public class FlowDataUtil {
 		//处理好的数据
 		Map<String, Object> result = new HashMap<>(16);
 		List<FormAllModel> mastForm = formAllModel.stream()
-			.filter(t -> FormEnum.mast.getMessage().equals(t.getFlowKey()))
+			.filter(t -> FormEnum.mast.getMessage().equals(t.getWorkflowKey()))
 			.toList();
 		List<FormAllModel> tableForm = formAllModel.stream()
-			.filter(t -> FormEnum.table.getMessage().equals(t.getFlowKey()))
+			.filter(t -> FormEnum.table.getMessage().equals(t.getWorkflowKey()))
 			.toList();
 		for (String key : dataNewMap.keySet()) {
 			FormAllModel model = mastForm.stream()
@@ -944,8 +953,7 @@ public class FlowDataUtil {
 		DbLinkEntity link) throws WorkFlowException {
 		DataModel dataModel = new DataModel(allDataMap, fieLdsModelList, tableModelList, mainId,
 			link, false);
-		Map<String, Object> result = this.update(dataModel);
-		return result;
+		return this.update(dataModel);
 	}
 
 	/**
@@ -960,8 +968,7 @@ public class FlowDataUtil {
 			//递归遍历模板
 			FormCloumnUtil.recursionForm(recursionForm, formAllModel);
 			//处理好的数据
-			Map<String, Object> result = this.updateDataList(dataModel, formAllModel);
-			return result;
+			return this.updateDataList(dataModel, formAllModel);
 		} catch (Exception e) {
 			log.error("修改异常：{}", e.getMessage());
 			throw new WorkFlowException(e.getMessage());
@@ -1013,7 +1020,7 @@ public class FlowDataUtil {
 		Map<String, Object> result) throws SQLException {
 		//子表
 		List<FormAllModel> tableForm = formAllModel.stream()
-			.filter(t -> FormEnum.table.getMessage().equals(t.getFlowKey()))
+			.filter(t -> FormEnum.table.getMessage().equals(t.getWorkflowKey()))
 			.toList();
 		Map<String, List<FormColumnModel>> childMap = new HashMap<>();
 		Map<String, TableModel> chidTable = new HashMap<>();
@@ -1052,7 +1059,7 @@ public class FlowDataUtil {
 			//关联字段
 			Optional<TableModel> first = tableModelList.stream()
 				.filter(t -> t.getTable().equals(table)).findFirst();
-			if (!first.isPresent()) {
+			if (first.isEmpty()) {
 				throw new SQLException(MsgCode.COD001.get());
 			}
 			String mastKeyName = first.get().getTableField();
@@ -1068,13 +1075,13 @@ public class FlowDataUtil {
 				Map<String, Object> childOneResult = new HashMap<>(16);
 				for (String childKey : columMap.keySet()) {
 					FieLdsModel fieLdsModel = columMap.get(childKey);
-					String flowKey = fieLdsModel.getConfig().getFlowKey();
+					String flowKey = fieLdsModel.getConfig().getWorkflowKey();
 					Object data = objectMap.get(childKey);
 					//处理系统自动生成
 					data = this.update(fieLdsModel, data, true);
-					String value = (isOracle && (FlowKeyConsts.DATE.equals(flowKey)
-						|| FlowKeyConsts.MODIFYTIME.equals(flowKey)
-						|| FlowKeyConsts.CREATETIME.equals(flowKey)))
+					String value = (isOracle && (WorkflowKeyConsts.DATE.equals(flowKey)
+						|| WorkflowKeyConsts.MODIFYTIME.equals(flowKey)
+						|| WorkflowKeyConsts.CREATETIME.equals(flowKey)))
 						? "to_date(?,'yyyy-mm-dd HH24:mi:ss')" : "?";
 					//添加数据
 					childData.add(data);
@@ -1120,13 +1127,13 @@ public class FlowDataUtil {
 		Map<String, Object> result) throws SQLException {
 		//副表
 		Map<String, List<FormAllModel>> mastTableAll = formAllModel.stream()
-			.filter(t -> FormEnum.mastTable.getMessage().equals(t.getFlowKey()))
+			.filter(t -> FormEnum.mastTable.getMessage().equals(t.getWorkflowKey()))
 			.collect(Collectors.groupingBy(e -> e.getFormMastTableModel().getTable()));
 		for (String key : mastTableAll.keySet()) {
 			//副表
 			Optional<TableModel> first = tableModelList.stream()
 				.filter(t -> t.getTable().equals(key)).findFirst();
-			if (!first.isPresent()) {
+			if (first.isEmpty()) {
 				throw new SQLException(MsgCode.COD001.get());
 			}
 			TableModel tableModel = first.get();
@@ -1143,7 +1150,7 @@ public class FlowDataUtil {
 				FormColumnModel mastTable = formMastTableModel.getMastTable();
 				FieLdsModel fieLdsModel = mastTable.getFieLdsModel();
 				String mostTableKey = fieLdsModel.getVModel();
-				String flowKey = fieLdsModel.getConfig().getFlowKey();
+				String flowKey = fieLdsModel.getConfig().getWorkflowKey();
 				Object data = dataNewMap.get(mostTableKey);
 				//处理系统自动生成
 				data = this.update(fieLdsModel, data, true);
@@ -1152,8 +1159,8 @@ public class FlowDataUtil {
 				//添加字段
 				mastData.add(data);
 				String field = formMastTableModel.getField();
-				String value = (isOracle && (FlowKeyConsts.DATE.equals(flowKey)
-					|| FlowKeyConsts.MODIFYTIME.equals(flowKey) || FlowKeyConsts.CREATETIME.equals(
+				String value = (isOracle && (WorkflowKeyConsts.DATE.equals(flowKey)
+					|| WorkflowKeyConsts.MODIFYTIME.equals(flowKey) || WorkflowKeyConsts.CREATETIME.equals(
 					flowKey))) ? "to_date(?,'yyyy-mm-dd HH24:mi:ss')" : "?";
 				filed.add(field + "=" + value);
 			}
@@ -1179,13 +1186,13 @@ public class FlowDataUtil {
 		Map<String, Object> result) throws SQLException {
 		Optional<TableModel> first = tableModelList.stream().filter(t -> "1".equals(t.getTypeId()))
 			.findFirst();
-		if (!first.isPresent()) {
+		if (first.isEmpty()) {
 			throw new SQLException(MsgCode.COD001.get());
 		}
 		TableModel tableModel = first.get();
 		String mastTableName = tableModel.getTable();
 		List<FormAllModel> mastForm = formAllModel.stream()
-			.filter(t -> FormEnum.mast.getMessage().equals(t.getFlowKey()))
+			.filter(t -> FormEnum.mast.getMessage().equals(t.getWorkflowKey()))
 			.filter(t -> StrUtil.isNotEmpty(t.getFormColumnModel().getFieLdsModel().getVModel()))
 			.toList();
 		//修改字段
@@ -1194,7 +1201,7 @@ public class FlowDataUtil {
 		String keyName = this.getKey(conn, mastTableName);
 		for (FormAllModel model : mastForm) {
 			FieLdsModel fieLdsModel = model.getFormColumnModel().getFieLdsModel();
-			String flowKey = fieLdsModel.getConfig().getFlowKey();
+			String flowKey = fieLdsModel.getConfig().getWorkflowKey();
 			String field = fieLdsModel.getVModel();
 			Object data = dataNewMap.get(field);
 			//处理系统自动生成
@@ -1202,8 +1209,8 @@ public class FlowDataUtil {
 			mastData.add(data);
 			//添加字段
 			String value =
-				(isOracle && (FlowKeyConsts.DATE.equals(flowKey) || FlowKeyConsts.MODIFYTIME.equals(
-					flowKey) || FlowKeyConsts.CREATETIME.equals(flowKey)))
+				(isOracle && (WorkflowKeyConsts.DATE.equals(flowKey) || WorkflowKeyConsts.MODIFYTIME.equals(
+					flowKey) || WorkflowKeyConsts.CREATETIME.equals(flowKey)))
 					? "to_date(?,'yyyy-mm-dd HH24:mi:ss')" : "?";
 			filed.add(field + "=" + value);
 			result.put(field, data);
@@ -1226,10 +1233,10 @@ public class FlowDataUtil {
 		Map<String, Object> result = new HashMap<>(16);
 		//系统数据
 		List<FormAllModel> mastForm = formAllModel.stream()
-			.filter(t -> FormEnum.mast.getMessage().equals(t.getFlowKey()))
+			.filter(t -> FormEnum.mast.getMessage().equals(t.getWorkflowKey()))
 			.toList();
 		List<FormAllModel> tableForm = formAllModel.stream()
-			.filter(t -> FormEnum.table.getMessage().equals(t.getFlowKey()))
+			.filter(t -> FormEnum.table.getMessage().equals(t.getWorkflowKey()))
 			.toList();
 		for (String key : dataNewMap.keySet()) {
 			FormAllModel model = mastForm.stream()
@@ -1278,12 +1285,12 @@ public class FlowDataUtil {
 	 * 修改系统赋值
 	 **/
 	private Object update(FieLdsModel fieLdsModel, Object dataValue, boolean isTable) {
-		String flowKey = fieLdsModel.getConfig().getFlowKey();
+		String flowKey = fieLdsModel.getConfig().getWorkflowKey();
 		String rule = fieLdsModel.getConfig().getRule();
 		UserInfo userInfo = userProvider.get();
 		Object value = dataValue;
 		switch (flowKey) {
-			case FlowKeyConsts.CREATEUSER:
+			case WorkflowKeyConsts.CREATEUSER:
 				if (!ObjectUtil.isEmpty(value)) {
 					UserEntity userEntity = serviceUtil.getByRealName(String.valueOf(value));
 					value = userEntity != null ? userEntity.getId() : userInfo.getUserId();
@@ -1291,13 +1298,13 @@ public class FlowDataUtil {
 					value = userInfo.getUserId();
 				}
 				break;
-			case FlowKeyConsts.CREATETIME:
+			case WorkflowKeyConsts.CREATETIME:
 				if (ObjectUtil.isEmpty(value)) {
 					value = DateUtil.getNow("+8");
 				}
 				break;
-			case FlowKeyConsts.CURRORGANIZE:
-			case FlowKeyConsts.CURRDEPT:
+			case WorkflowKeyConsts.CURRORGANIZE:
+			case WorkflowKeyConsts.CURRDEPT:
 				if (!ObjectUtil.isEmpty(value)) {
 					String posValue = String.valueOf(value);
 					//多级组织取最后一级
@@ -1308,20 +1315,20 @@ public class FlowDataUtil {
 					value = organizeEntity != null ? organizeEntity.getId() : value;
 				}
 				break;
-			case FlowKeyConsts.MODIFYTIME:
+			case WorkflowKeyConsts.MODIFYTIME:
 				value = DateUtil.getNow("+8");
 				break;
-			case FlowKeyConsts.MODIFYUSER:
+			case WorkflowKeyConsts.MODIFYUSER:
 				value = userInfo.getUserId();
 				break;
-			case FlowKeyConsts.CURRPOSITION:
+			case WorkflowKeyConsts.CURRPOSITION:
 				if (!ObjectUtil.isEmpty(value)) {
 					PositionEntity positionEntity = serviceUtil.getPositionFullName(
 						String.valueOf(value));
 					value = positionEntity != null ? positionEntity.getId() : "";
 				}
 				break;
-			case FlowKeyConsts.BILLRULE:
+			case WorkflowKeyConsts.BILLRULE:
 				if (ObjectUtil.isEmpty(value)) {
 					try {
 						value = serviceUtil.getBillNumber(rule);
@@ -1330,22 +1337,22 @@ public class FlowDataUtil {
 					}
 				}
 				break;
-			case FlowKeyConsts.DATE:
+			case WorkflowKeyConsts.DATE:
 				if (isTable) {
 					try {
 						value = DateUtil.dateToString(
-							new Date(Long.valueOf(String.valueOf(dataValue))),
+							new Date(Long.parseLong(String.valueOf(dataValue))),
 							"yyyy-MM-dd HH:mm:ss");
-					} catch (Exception e) {
+					} catch (Exception ignored) {
 
 					}
 				}
 				break;
-			case FlowKeyConsts.NUM_INPUT:
+			case WorkflowKeyConsts.NUM_INPUT:
 				if (isTable) {
 					try {
 						value = new BigDecimal(String.valueOf(dataValue));
-					} catch (Exception e) {
+					} catch (Exception ignored) {
 
 					}
 				}
